[lazy-narvi] several refinement